@@ -20,6 +20,7 @@ import com.t1t.digipolis.apim.core.exceptions.StorageException;
 import com.t1t.digipolis.apim.exceptions.OAuthException;
 import com.t1t.digipolis.apim.exceptions.SAMLAuthException;
 import com.t1t.digipolis.apim.exceptions.SystemErrorException;
+import com.t1t.digipolis.apim.exceptions.UserNotFoundException;
 import com.t1t.digipolis.apim.facades.OAuthFacade;
 import com.t1t.digipolis.apim.facades.UserFacade;
 import com.t1t.digipolis.apim.security.ISecurityContext;
@@ -33,13 +34,11 @@ import org.jose4j.jwt.consumer.InvalidJwtException;
 import org.jose4j.lang.JoseException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import retrofit.http.Query;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.Produces;
+import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import java.io.UnsupportedEncodingException;
@@ -65,23 +64,49 @@ public class LoginResource implements ILoginResource {
     private static final Logger log = LoggerFactory.getLogger(LoginResource.class.getName());
 
     @ApiOperation(value = "IDP Callback URL for the Marketplace",
-            notes = "Use this endpoint if no user is logged in, and a redirect to the IDP is needed. This enpoint is generating the SAML2 SSO redirect request using OpenSAML and the provided IDP URL. The requests specifies the client token expectations, 'jwt' token supported. The clientAppName property is optional and will serve as the JWT audience claim." +
-                    "When the token expiration time is set to 0, the token will be valid for all times. The optional claims map can be provided by the consuming application. The claim set can be changed upon refreshing the JWT.")
+                       notes = "Use this endpoint if no user is logged in, and a redirect to the IDP is needed. This enpoint is generating the SAML2 SSO redirect request using OpenSAML and the provided IDP URL. The requests specifies the client token expectations, 'jwt' token supported. The clientAppName property is optional and will serve as the JWT audience claim." +
+                               "When the token expiration time is set to 0, the token will be valid for all times. The optional claims map can be provided by the consuming application. The claim set can be changed upon refreshing the JWT.")
     @ApiResponses({
                           @ApiResponse(code = 200, response = String.class, message = "SAML2 authentication request"),
                           @ApiResponse(code = 500, response = String.class, message = "Server error generating the SAML2 request")
-    })
+                  })
     @POST
     @Path("/idp/redirect")
     @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.TEXT_PLAIN)
-    public String getSAML2AuthRequestUri(SAMLRequest request) {
+    public String postSAML2AuthRequestUri(SAMLRequest request) {
         Preconditions.checkNotNull(request);
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getIdpUrl()));
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getSpName()));
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getSpUrl()));
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getClientAppRedirect()));
         Preconditions.checkArgument(request.getToken().equals(ClientTokeType.opaque) || request.getToken().equals(ClientTokeType.jwt));
+        return userFacade.generateSAML2AuthRequest(request);
+    }
+
+    @ApiOperation(value = "IDP Callback URL for the Marketplace",
+                  notes = "Use this endpoint if no user is logged in, and a redirect to the IDP is needed. This enpoint is generating the SAML2 SSO redirect request using OpenSAML and the provided IDP URL. The requests specifies the client token expectations, 'jwt' token supported. The clientAppName property is optional and will serve as the JWT audience claim.")
+    @ApiResponses({
+                          @ApiResponse(code = 200, response = String.class, message = "SAML2 authentication request"),
+                          @ApiResponse(code = 500, response = String.class, message = "Server error generating the SAML2 request")
+                  })
+    @GET
+    @Path("/idp/redirect")
+    @Produces(MediaType.TEXT_PLAIN)
+    public String getSAML2AuthRequestUri(@QueryParam("idp_url")String idpUrl,
+                                         @QueryParam("sp_name")String spName,
+                                         @QueryParam("sp_url") String spUrl,
+                                         @QueryParam("client_redirect")String clientRedirect) {
+        Preconditions.checkArgument(!StringUtils.isEmpty(idpUrl));
+        Preconditions.checkArgument(!StringUtils.isEmpty(spName));
+        Preconditions.checkArgument(!StringUtils.isEmpty(spUrl));
+        Preconditions.checkArgument(!StringUtils.isEmpty(clientRedirect));
+        SAMLRequest request = new SAMLRequest();
+        request.setClientAppRedirect(clientRedirect);
+        request.setIdpUrl(idpUrl);
+        request.setSpName(spName);
+        request.setSpUrl(spUrl);
+        request.setToken(ClientTokeType.jwt);
         return userFacade.generateSAML2AuthRequest(request);
     }
 
@@ -94,13 +119,43 @@ public class LoginResource implements ILoginResource {
     @POST
     @Path("/idp/redirect/proxied")
     @Consumes(MediaType.APPLICATION_JSON)
-    public Response getSAML2AuthRequestRedirect(SAMLRequest request) {
+    public Response postSAML2AuthRequestRedirect(SAMLRequest request) {
         Preconditions.checkNotNull(request);
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getIdpUrl()));
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getSpName()));
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getSpUrl()));
         Preconditions.checkArgument(!StringUtils.isEmpty(request.getClientAppRedirect()));
         Preconditions.checkArgument(request.getToken().equals(ClientTokeType.opaque) || request.getToken().equals(ClientTokeType.jwt));
+        String idpRequest = userFacade.generateSAML2AuthRequest(request);
+        URI idpRequestUri = null;
+        try {
+            idpRequestUri = new URI(idpRequest);
+            return Response.seeOther(idpRequestUri).build();
+        } catch (URISyntaxException e) {
+            new SystemErrorException(e.getMessage());
+        }
+        throw  new SystemErrorException("Error in redirect");
+    }
+
+    @ApiOperation(value = "IDP Immediate Redirect URL for the Marketplace",
+                  notes = "Use this endpoint if no user is logged in, and a redirect to the IDP is needed. This enpoint is generating and performing the SAML2 SSO redirect request using OpenSAML and the provided IDP URL. The requests specifies the client token expectations, 'jwt' token supported. The clientAppName property is optional and will serve as the JWT audience claim.")
+    @ApiResponses({@ApiResponse(code = 301, message = "SAML2 authentication request")})
+    @GET
+    @Path("/idp/redirect/proxied")
+    public Response getSAML2AuthRequestRedirect(@QueryParam("idp_url")String idpUrl,
+                                                @QueryParam("sp_name")String spName,
+                                                @QueryParam("sp_url") String spUrl,
+                                                @QueryParam("client_redirect")String clientRedirect) {
+        Preconditions.checkArgument(!StringUtils.isEmpty(idpUrl));
+        Preconditions.checkArgument(!StringUtils.isEmpty(spName));
+        Preconditions.checkArgument(!StringUtils.isEmpty(spUrl));
+        Preconditions.checkArgument(!StringUtils.isEmpty(clientRedirect));
+        SAMLRequest request = new SAMLRequest();
+        request.setClientAppRedirect(clientRedirect);
+        request.setIdpUrl(idpUrl);
+        request.setSpName(spName);
+        request.setSpUrl(spUrl);
+        request.setToken(ClientTokeType.jwt);
         String idpRequest = userFacade.generateSAML2AuthRequest(request);
         URI idpRequestUri = null;
         try {
@@ -128,7 +183,7 @@ public class LoginResource implements ILoginResource {
         JWTRefreshResponseBean jwtRefreshResponseBean = new JWTRefreshResponseBean();
         try {
             jwtRefreshResponseBean = userFacade.refreshToken(jwtRefreshRequestBean);
-        } catch (UnsupportedEncodingException | InvalidJwtException | MalformedClaimException | JoseException e) {
+        } catch (UnsupportedEncodingException | InvalidJwtException | MalformedClaimException | JoseException |StorageException e) {
             new SystemErrorException(e);
         }
         return jwtRefreshResponseBean;
@@ -143,13 +198,43 @@ public class LoginResource implements ILoginResource {
     @POST
     @Path("/idp/callback")
     @Produces(MediaType.TEXT_PLAIN)
-    public Response executeSAML2Callback(String request) {
+    public Response executeSAML2Callback(@FormParam("SAMLResponse") String samlResponse, @FormParam("RelayState") String relayState) {
+        return samlCallback(samlResponse, relayState);
+    }
+
+    @ApiOperation(value = "The service provider for the SAML2 Authentication request (external markatplace).",
+                  notes = "This endpoint should be used by an IDP who's responding with a SAML2 Authentication response (external marketplace). The endpoint will provide an authorization token in return, towards the configured client URL (provided with the /idp/redirect request).")
+    @ApiResponses({
+                          @ApiResponse(code = 200, response = String.class, message = "SAML2 authentication request"),
+                          @ApiResponse(code = 500, response = String.class, message = "Server error generating the SAML2 request")
+                  })
+    @POST
+    @Path("/idp/callback/astad")
+    @Produces(MediaType.TEXT_PLAIN)
+    public Response executeSAML2CallbackAStad(@FormParam("SAMLResponse") String samlResponse, @FormParam("RelayState") String relayState) {
+        return samlCallback(samlResponse, relayState);
+    }
+
+    /**
+     * Callback endpoint for IDP. The IDP can have different Service providers, returning on a different callback.
+     * This method resolves the callbacks SP independantly.
+     *
+     * @param samlResponse
+     * @param relayState
+     * @return
+     */
+    private Response samlCallback(String samlResponse,String relayState){
         URI uri = null;
+        log.debug("SAML Response - pure: {}",samlResponse);
         try {
-            SAMLResponseRedirect response = userFacade.processSAML2Response(request);
-            //if returned null - we are operating in restricted mode - 401 should be returned
+            SAMLResponseRedirect response = userFacade.processSAML2Response(samlResponse,relayState);
             String jwtToken = response.getToken();
-            uri = new URL(response.getClientUrl() + "?jwt=" + jwtToken).toURI();
+            URI clientUrl = new URI(response.getClientUrl());
+            if(clientUrl.getQuery()!=null){
+                uri = new URL(response.getClientUrl() + "&jwt=" + jwtToken).toURI();
+            }else{
+                uri = new URL(response.getClientUrl() + "?jwt=" + jwtToken).toURI();
+            }
         } catch (URISyntaxException e) {
             e.printStackTrace();
         } catch (MalformedURLException e) {
@@ -159,7 +244,7 @@ public class LoginResource implements ILoginResource {
             throw new SAMLAuthException(e.getMessage());
         }
         if (uri != null) return Response.seeOther(uri).build();
-        return Response.ok(request).build();
+        return Response.status(500).entity("Could not parse the initial consumer URI").build();
     }
 
     @ApiOperation(value = "External SAML2 validation endpoint for consumers dealing with IDP directly",
@@ -213,9 +298,23 @@ public class LoginResource implements ILoginResource {
     @Path("/idp/slo")
     @Produces(MediaType.TEXT_PLAIN)
     public Response singleIDPLogout() {
-        //don't do anything, logout triggered from client
-        //TODO change to the mkt page to login
-        String url = "https://google.com/";
+        return idpLogout();
+    }
+
+    @ApiOperation(value = "IDP single logout (external marketplace)",
+                  notes = "This endpoint can be used by an IDP to logout a user from the external marketplace.")
+    @ApiResponses({
+                          @ApiResponse(code = 200, response = String.class, message = "IDP single logout.")
+                  })
+    @POST
+    @Path("/idp/slo")
+    @Produces(MediaType.TEXT_PLAIN)
+    public Response singleIDPLogoutAStad() {
+        return idpLogout();
+    }
+
+    private Response idpLogout(){
+        String url = "https://google.com/";//some URI
         URI redirectURL = null;
         try {
             redirectURL = new URL(url).toURI();
@@ -231,7 +330,7 @@ public class LoginResource implements ILoginResource {
     @ApiOperation(value = "Performs a search on user email towards the coupled Identity Provider.",
             notes = "This endpoint can be used to search for users - external to the system - but discoverable through a coupled Identity Provider. The user - if not know in the API Manager - will be initialized and set ready for use.")
     @ApiResponses({
-            @ApiResponse(code = 200, response = ExternalUserBean.class, message = "External and initialized user.")
+                          @ApiResponse(code = 200, response = ExternalUserBean.class, message = "External and initialized user.")
     })
     @POST
     @Path("/idp/user/mail")
@@ -241,18 +340,14 @@ public class LoginResource implements ILoginResource {
         Preconditions.checkNotNull(externalUserRequest);
         Preconditions.checkArgument(!StringUtils.isEmpty(externalUserRequest.getUserMail()));
         ExternalUserBean userByEmail = null;
-        try {
-            userByEmail = userFacade.getUserByEmail(externalUserRequest.getUserMail());
-        } catch (StorageException e) {
-            e.printStackTrace();
-        }
+        userByEmail = userFacade.getUserByEmail(externalUserRequest.getUserMail());
         return Response.ok().entity(userByEmail).build();
     }
 
     @ApiOperation(value = "Performs a search on user unique name towards the coupled Identity Provider.",
             notes = "This endpoint can be used to search for users - external to the system - but discoverable through a coupled Identity Provider. The user - if not know in the API Manager - will be initialized and set ready for use.")
     @ApiResponses({
-            @ApiResponse(code = 200, response = ExternalUserBean.class, message = "External and initialized user.")
+                          @ApiResponse(code = 200, response = ExternalUserBean.class, message = "External and initialized user.")
     })
     @POST
     @Path("/idp/user/name")
